# enumerate_smiles

./: .flake8  .gitignore  LICENSE  README.md  setup.cfg  tox.ini
src/enumerate_smiles/: IO.py  __init__.py  main.py  smiles_enumeration.py
tests/: __init__.py  constants.py  test_descs_fps.py  test_details.py  test_enumeration.py  test_fetchmols.py
tests/samples/: CID148124.mol  CID148124.mol2  CID18730.mae  drugs.sdf
