[metadata]
name = enumerate-smiles
version = attr: enumerate_smiles.__version__
description = "Enumerate heterocycles, stereoisomers, tautomers and SMILES of molecules."
long_description = file: README.rst

url = https://github.com/OlivierBeq/enumerate-smiles
download_url = https://github.com/OlivierBeq/enumerate-smiles/releases
project_urls =
    Bug Tracker = https://github.com/OlivierBeq/enumerate-smiles/issues
    Source Code = https://github.com/OlivierBeq/enumerate-smiles

author = "Olivier J. M. Béquignon"
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = "Olivier J. M. Béquignon"
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license = MIT
license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

keywords =
    SMILES
    enumeration
    cheminformatics
    snekpack
    cookiecutter

[options]
zip_safe = false
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    numpy
    rdkit
    tqdm
    bounded-pool-executor==0.0.3

[options.packages.find]
where = src

[options.package_data]
* = *

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx<7
    sphinx-rtd-theme

    sphinx-autodoc-typehints
    sphinx_automodapi

[doc8]
max-line-length = 120

[coverage:paths]
source =
    src/enumerate-smiles
    .tox/*/lib/python*/site-packages/enumerate-smiles

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    enumerate-smiles
    tests
